+Fix direction choices not being disabled for search in files operation in
 Find dialog.
+Fix error handling for when incorrect regular expressions are used in a
 replace statement.
+Fix error that could occur when right clicking on tab area.
+Fix off by one error in vim jump to line command.
+Fix some clipboard related issues when running under gtk.
+Fix tab scrolling rate

#-----------------------------------------------------------------------------#

VERSION 0.4.95
DATE 06/23/2009
27th Alpha Release

NEWS:

Had planned to wait till 0.5 was ready before doing another release but there
have been too many good enhancements added due to all the great patches submitted
during this cycle to wait for the last push to 0.5 to complete before releasing.

Some of the main new features include buffer syncronziation with the codebrowser
plugin, completely re-worked vi emulation support, position history, and
clipboard ring. See below for more detailed list of changes.


NEW: [features/improvements]
+Clipboard history feature, can now cycle through recent clipboard entries when
pasting text into the document.
+Add automatic file backup option to periodically backup buffer contents.
+Add Search/Replace in selection option to find dialog.
+Remembers recent caret positions between jumps and allows for quick navigation
between them.
+Patch from (Hasan Aljudy) to show cwd and add e! command to commandbar
+Automatically show path completion list when doing an e or cd command.
+Display the documents EOL mode in the status bar.
+Add support for XText (patch from Igor Dejanovic).
+Support XText in Codebrowser (patch from Igor Dejanovic).
+Complete re-write of vi emulation support (patch from Hasan Aljudy)
+Add option to start in Normal mode by default when using vi emulation (patch from Hasan Aljudy).
+Codebrowser syncronizes with caret position. (patch from Igor Dejanovic)
+Find dialog remembers last position throughout session.
+Add support for the Cobra programming language.